--- a/android/tick/res/values/strings.xml
+++ b/android/tick/res/values/strings.xml
@@ -3,19 +3,21 @@
     <string name="app_name">Tick</string>
     <string name="app_desc">Tick mass notification client</string>
     
-     <string name="dialog_ok">OK</string>
+    <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
     <string name="dialog_delete">Delete</string>
     <string name="dialog_clear">Clear</string>
     
-    <string name="menu_channel_add">Add channel</string>
-    <string name="menu_channel_add_shortcut">a</string>
-    <string name="menu_preferences">Preferences</string>
-    <string name="menu_preferences_shortcut">p</string>
-    <string name="menu_quit">Quit</string>
-    <string name="menu_quit_shortcut">q</string>
+    <string name="menu_auth_about">About</string>
+    <string name="menu_auth_about_shortcut">a</string>
+    <string name="menu_main_channel_add">Add channel</string>
+    <string name="menu_main_channel_add_shortcut">a</string>
+    <string name="menu_main_preferences">Preferences</string>
+    <string name="menu_main_preferences_shortcut">p</string>
+    <string name="menu_main_quit">Quit</string>
+    <string name="menu_main_quit_shortcut">q</string>
     
     <string name="preference_title">Preferences</string>
     <string name="preference_about_title">About</string>    
