--- a/android/tick/res/values-fr/strings.xml
+++ b/android/tick/res/values-fr/strings.xml
@@ -10,12 +10,17 @@
     <string name="dialog_delete">Effacer</string>
     <string name="dialog_clear">Vider</string>
     
-    <string name="menu_channel_add">Ajouter d\'un canal</string>
-    <string name="menu_channel_add_shortcut">a</string>
-    <string name="menu_preferences">Préférences</string>
-    <string name="menu_preferences_shortcut">p</string>
-    <string name="menu_quit">Quitter</string>
-    <string name="menu_quit_shortcut">q</string>
+    <string name="menu_auth_about">About</string>
+    <string name="menu_auth_about_shortcut">a</string>
+    <string name="menu_main_channel_add">Add channel</string>
+    <string name="menu_main_channel_add_shortcut">a</string>
+    <string name="menu_main_preferences">Preferences</string>
+    <string name="menu_main_preferences_shortcut">p</string>
+    <string name="menu_main_quit">Quit</string>
+    <string name="menu_main_quit_shortcut">q</string>
+    
+    <string name="preference_title">Preferences</string>
+    <string name="preference_about_title">About</string>    
     
     <string name="prompt_help_question">Voulez-vous voir le vidéo d\'aide sur YouTube?</string>
     <string name="prompt_help_title">Aide</string>
