Having fun with ActionBarSherlock
added maven support for ActionBarSherlock
added top menu

--- a/android/tick/res/values/strings.xml
+++ b/android/tick/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="hello">Hello tick!</string>
     <string name="app_name">tick</string>
+    <string name="menu_save">Save</string>
+    <string name="menu_search">Search</string>
+    <string name="menu_options">Options</string>
+
 </resources>
